[package]
name = "sketchbook-tiff-converter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
log = "0.4.14"
env_logger = "0.9.0"

[dependencies.skora]
#git = "https://github.com/aero530/skora.git"
#branch = "main"
path = "../skora"